--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode/
+
 DebugLib/
 DebugExe/
 DebugExt/
@@ -12,7 +14,6 @@ lib/m114*
 lib/bip*
 docs/
 
-src/ext*
 src/xxx/
 src/aig/au/
 src/aig/ssm/
