--- a/abc.rc
+++ b/abc.rc
@@ -143,4 +143,7 @@ alias fix_blif    "undc; strash; zero"
 # lazy man's synthesis
 alias recadd3     "st; rec_add3; b; rec_add3; dc2; rec_add3; if -K 8; bidec; st; rec_add3; dc2; rec_add3; if -g -K 6; st; rec_add3"
 
-
+# for final project
+alias rben "read EPFL-benchmark-suite/random_control/ctrl.aig"
+alias a2t lsv_aig2th 
+alias pth lsv_print_th
