2022/1/16 new day starts!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,5 +80,6 @@
         "numbers": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
